<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".photographyUploader">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photography_image_view"
            android:src="@drawable/ic_insert_photo_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="5dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageView
               android:src="@drawable/ic_creatives_contact_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp" />

           <EditText
               android:id="@+id/enter_contacts"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:ems="16"
               android:hint="Enter Your Contacts"/>

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_creatives_location_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/enter_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Enter Location Of Event"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_creatives_date_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/enter_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Enter Your Date Of Event"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_creatives_time_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/enter_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Enter Time Of Event"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_description_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/enter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Description Of Event"/>

        </LinearLayout>

        <Button
            android:id="@+id/post_to_creatives"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#00BCD4"
            android:text="Post" />

    </LinearLayout>










</ScrollView>