<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/creativesbackground"
    tools:context=".creativesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/creatives_photography_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="40dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/radius_corner_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photography"/>

                <TextView
                    android:id="@+id/photograpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Photography"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="50dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/creatives_music_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp"
            android:layout_margin="12dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/radius_corner_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/creativesmusic" />

                <TextView
                    android:id="@+id/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Music"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="50dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/creatives_visualArts_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/radius_corner_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/creativesart" />

                <TextView
                    android:id="@+id/visualArt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Visual Art"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="50dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/creatives_interestGroupd_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="40dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/radius_corner_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/creativesinterestgroups" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Interest Groups"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="50dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>