<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostOnHealth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/health_image_view"
            android:src="@drawable/ic_insert_photo_black_24dp"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="400dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_adb_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/health_post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Name Of Post"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_description_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/health_descrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_style_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/health_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Category: Tips, Food or Recipes"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_creatives_date_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/health_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Enter Your Date Of Event"/>

        </LinearLayout>


        <Button
            android:id="@+id/health_post_button"
            android:background="#00BCD4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Post"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>