<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/registerlogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="70dp">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:src="@drawable/pic"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="30dp"
                android:hint= "Name"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:src="@drawable/pic"/>

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint= "Surname"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:src="@drawable/phone"/>

            <EditText
                android:id="@+id/stdNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint= "Student Number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:src="@drawable/third"/>

            <EditText
                android:id="@+id/createPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint= "Create Password"
                android:inputType="textPassword"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="160px"
                android:layout_height="140px"
                android:src="@drawable/pad"/>

            <EditText
                android:id="@+id/veriPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint= "Verify Password"
                android:inputType="textPassword"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:src="@drawable/at"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint= "Email Address"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:src="@drawable/msg"/>

            <EditText
                android:id="@+id/veriEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint= "Verify Email Address"
                />
        </LinearLayout>

        <Button
            android:id="@+id/regiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Sign Up"
            android:background="#3F51B5"/>


    </LinearLayout>
</ScrollView>


